# valami

./: allapotgep.cpp
Genetika/: CMakeLists.txt  allapotgep.h
